[package]
name = "amp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"]}
serenity = {version = "0.10.9", default-features = false, features = ["utils", "client", "gateway", "model", "rustls_backend"] }
