[package]
name = "amp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
env_logger = "0.9.0"
songbird = { version = "0.2.0", features = ["builtin-queue"]}
tokio = { version = "1.10.0", features = ["macros", "signal","rt-multi-thread"]}
serenity = {version = "0.10.9", default-features = false, features = [
    "utils", "client", "gateway", "cache", "model", "rustls_backend", "framework", "standard_framework", "voice"
] }
